# taiwan-payment-promotions

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
config/: sources.json
data/: ai_supplement.json
docs/: index.html
docs/assets/: app.css  app.js
docs/data/: promotions.json
prompts/: daily-publish.md  full-scan.md  quota-check.md
scripts/: build_site.py  run_monitor.py
src/payment_promotions_monitor/: __init__.py  adapters.py  cli.py  dates.py  discovery.py  fetch.py  html_extract.py  insights.py  models.py  report.py  status.py  storage.py
tests/: test_adapters.py  test_cli.py  test_dates.py  test_discovery.py  test_fetch.py  test_html_extract.py  test_insights.py  test_report.py  test_site_build.py  test_status.py  test_storage.py
web/: index.html
web/assets/: app.js
