[project]
name = "taiwan-payment-promotions-monitor"
version = "0.1.0"
description = "Official-source monitor for Taiwan mobile and electronic payment promotions"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
payment-promotions-monitor = "payment_promotions_monitor.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

